--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <div class="div1">
                     <div class="div1con">
-                        <center> <img src="/images/translogo.webp" class="div1img"></center>
+                        <center> <img src="images/translogo.webp" class="div1img"></center>
                         <h2>
                             <center> <span style="color: green; margin-left: 20px;">نلعب لنتعلم</span>
 
